--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="orange">#FF7519</color>
     <color name="orange_clicked">#FF6600</color>
     
+    <color name="blue">#4791B5</color>
+    
 </resources>
