Made some changes to the selection of the listview items

--- a/res/layout/cell_user.xml
+++ b/res/layout/cell_user.xml
@@ -10,13 +10,14 @@
         android:id="@+id/cell_profile_imageview"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@color/light_gray" />
+        android:background="@color/light_gray" />
     
     <TextView 
         android:id="@+id/cell_profile_username"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/small_padding"
+        android:gravity="center_vertical"
         android:textSize="@dimen/medium_font" />
 
 </LinearLayout>
