Added the portrait and landscape views, give all the vaults to the chartview

--- a/res/layout/fragment_vault.xml
+++ b/res/layout/fragment_vault.xml
@@ -125,6 +125,11 @@
 		        android:text="@string/compare_button_title"
 		        style="@style/button_style"/>
 	        
+	        <Button 
+		        android:id="@+id/chart_info_button"
+		        android:text="@string/chart_button_title"
+		        style="@style/button_style"/>
+	        
 	    </LinearLayout>
     </LinearLayout>
 </ScrollView>
