--- a/App/res/layout/activity_chart.xml
+++ b/App/res/layout/activity_chart.xml
@@ -1,7 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment_container"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nl.avans.ras.activities.ChartActivity"
-    tools:ignore="MergeRootFrame" />
+    android:orientation="vertical" >
+    
+    <android.support.v4.view.ViewPager
+		android:id="@+id/pager"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:visibility="visible" />
+		    
+   	<com.viewpagerindicator.CirclePageIndicator
+   		android:id="@+id/indicator"
+		android:padding="10dip"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent" />
+
+</LinearLayout>
