--- a/App/res/layout/activity_chart.xml
+++ b/App/res/layout/activity_chart.xml
@@ -6,13 +6,15 @@
     <android.support.v4.view.ViewPager
 		android:id="@+id/pager"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
+		android:layout_height="match_parent"
+		android:layout_weight="1"
 		android:visibility="visible" />
-		    
+	   
    	<com.viewpagerindicator.CirclePageIndicator
    		android:id="@+id/indicator"
 		android:padding="10dip"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent" />
-
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_weight="20" />
+	
 </LinearLayout>
