--- a/App/res/layout/fragment_settings.xml
+++ b/App/res/layout/fragment_settings.xml
@@ -2,7 +2,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical" >
+    
+    <EditText
+        android:id="@+id/old_password_textfield"
+        android:hint="@string/old_password"
+        android:inputType="textPassword"
+        style="@style/edit_text_style"  />
+    
+    <EditText
+        android:id="@+id/new_password_textfield"
+        android:hint="@string/new_password"
+        android:inputType="textPassword"
+        style="@style/edit_text_style"  />
+    
+    <EditText
+        android:id="@+id/confirm_new_password_textfield"
+        android:hint="@string/confirm_new_password"
+        android:inputType="textPassword"
+        style="@style/edit_text_style"  />
+    
+    <Button 
+        android:id="@+id/save_new_password_button"
+        android:text="@string/save_new_password_title"
+        style="@style/button_style"/>
+    
+    <Button 
+        android:id="@+id/change_password_button"
+        android:text="@string/change_password_title"
+        style="@style/button_style"/>
     
 
 </LinearLayout>
