--- a/App/res/layout/cell.xml
+++ b/App/res/layout/cell.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical" >
+    android:paddingBottom="@dimen/activity_vertical_margin" >
     
     <TextView 
         android:id="@+id/cell_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:textSize="@dimen/medium_font" />
+
+    <TextView
+        android:id="@+id/cell_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/dark_gray"
         android:textSize="@dimen/medium_font" />
     
-</LinearLayout>
+</RelativeLayout>
