--- a/App/res/layout/fragment_filter.xml
+++ b/App/res/layout/fragment_filter.xml
@@ -25,19 +25,49 @@
 	    android:layout_margin="@dimen/activity_horizontal_margin"
 	    android:orientation="vertical" >
 	
-        <TextView 
-            android:id="@+id/vault_kind_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/medium_font" 
-            android:text="@string/vault_type_title" />
-	
-        <TextView 
-            android:id="@+id/location_title"
-            android:layout_marginTop="@dimen/small_padding"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/medium_font" 
-            android:text="@string/location_title" />
+        <TableLayout
+	     	android:id="@+id/user_information_table"
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="@dimen/activity_vertical_margin">
+	            
+	        <TableRow
+				android:id="@+id/tableRow1"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content" >
+
+	            <TextView
+	                android:id="@+id/vault_kind_title"
+	                style="@style/table_row_title_style"
+	                android:text="@string/vault_type_title" />
+			 
+			    <Button
+			    	android:id="@+id/vault_type_filter_button"
+			        android:text="Column 2"
+			        style="@style/table_row_input_style_button" />
+			</TableRow>
+			
+	        <TableRow
+				android:id="@+id/tableRow2"
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content" >
+			 
+			    <TextView
+			    	android:id="@+id/location_title"
+			        android:text="@string/location_title"
+			        style="@style/table_row_title_style" />
+
+			    <Button
+			        android:id="@+id/location_filter_button"
+			        style="@style/table_row_input_style_button"
+			        android:text="Column 2" />
+
+			</TableRow> 
+	  	</TableLayout>
+	  	
+        <Button
+	        android:id="@+id/clear_button"
+	        style="@style/button_style"
+	        android:text="@string/clear_button_title" />
 	</LinearLayout>
 </LinearLayout>
