--- a/App/res/layout/splashscreen.xml
+++ b/App/res/layout/splashscreen.xml
@@ -5,14 +5,16 @@
     android:layout_height="match_parent"
     android:padding="@dimen/splashscreen_padding"
     android:orientation="vertical"
-    android:background="@color/light_gray" >
+    android:background="@color/white" >
     
     <ImageView 
         android:layout_width="match_parent" 
-        android:layout_height="125dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="75dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:scaleType="fitXY"
-        android:src="@drawable/innosportlab_logo" />
+        android:src="@drawable/splashscreen_image" />
 
 </LinearLayout>
