--- a/App/res/layout/fragment_profile.xml
+++ b/App/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="250dp"
 	        android:scaleType="fitXY"
-	        android:src="@drawable/epke" />
+	        android:src="@drawable/no_image" />
 	
 	    <LinearLayout
 	    	android:layout_width="match_parent"
