--- a/App/res/layout/fragment_vault.xml
+++ b/App/res/layout/fragment_vault.xml
@@ -92,6 +92,38 @@
 			        android:layout_height="wrap_content" >
 			 
 			        <TextView
+			            android:id="@+id/vault_penalty_title"
+			            android:text="@string/penalty_title"
+			            style="@style/table_row_title_style" />
+			 
+			        <TextView
+			            android:id="@+id/vault_penalty_container"
+			            android:text="Column 2"
+			            style="@style/table_row_input_style" />
+			    </TableRow>
+	            
+	            <TableRow
+			        android:id="@+id/tableRow1"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content" >
+			 
+			        <TextView
+			            android:id="@+id/vault_competition_title"
+			            android:text="@string/competition_title"
+			            style="@style/table_row_title_style" />
+			 
+			        <TextView
+			            android:id="@+id/vault_competition_container"
+			            android:text="Column 2"
+			            style="@style/table_row_input_style" />
+			    </TableRow>
+	            
+	            <TableRow
+			        android:id="@+id/tableRow1"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content" >
+			 
+			        <TextView
 			            android:id="@+id/vault_type_title"
 			            android:text="@string/vault_type_title"
 			            style="@style/table_row_title_style" />
