--- a/App/res/values/dimens.xml
+++ b/App/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="splashscreen_padding">25dp</dimen>
     
     <!-- Font sizes -->
+    <dimen name="extra_small_font">13dp</dimen>
     <dimen name="small_font">16dp</dimen>
     <dimen name="medium_font">20dp</dimen>
     <dimen name="large_font">26dp</dimen>
