--- a/App/res/layout/splashscreen.xml
+++ b/App/res/layout/splashscreen.xml
@@ -3,18 +3,14 @@
     android:id="@+id/splashscreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/splashscreen_padding"
     android:orientation="vertical"
     android:background="@color/white" >
-    
-    <ImageView 
-        android:layout_width="match_parent" 
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="75dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:scaleType="fitXY"
-        android:src="@drawable/splashscreen_image" />
 
+    <ImageView 
+        android:id="@+id/splashscreen_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/splashscreen" />
+    
 </LinearLayout>
